// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineBase render renders 1`] = `
<g>
  <GridDraggable
    from={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    to={
      Object {
        "x": 1,
        "y": 1,
      }
    }
  />
  <WithStyles(GridDraggable)
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    x={0}
    y={0}
  />
  <WithStyles(GridDraggable)
    angle={45}
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    x={1}
    y={1}
  />
</g>
`;

exports[`lineBase render renders with labels 1`] = `
<g>
  <GridDraggable
    from={
      Object {
        "label": "A",
        "x": 0,
        "y": 0,
      }
    }
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    to={
      Object {
        "label": "B",
        "x": 1,
        "y": 1,
      }
    }
  />
  <WithStyles(GridDraggable)
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    labelNode={<foreignobject />}
    onDrag={[Function]}
    x={0}
    y={0}
  />
  <Portal
    containerInfo={<foreignobject />}
  >
    <WithStyles(MarkLabel)
      disabled={true}
      graphProps={
        Object {
          "domain": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "range": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
          "size": Object {
            "height": 400,
            "width": 400,
          },
          "snap": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
        }
      }
      inputRef={[Function]}
      mark={
        Object {
          "label": "A",
          "x": 0,
          "y": 0,
        }
      }
      onChange={[Function]}
    />
  </Portal>
  <WithStyles(GridDraggable)
    angle={45}
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    labelNode={<foreignobject />}
    onDrag={[Function]}
    x={1}
    y={1}
  />
  <Portal
    containerInfo={<foreignobject />}
  >
    <WithStyles(MarkLabel)
      disabled={true}
      graphProps={
        Object {
          "domain": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "range": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
          "size": Object {
            "height": 400,
            "width": 400,
          },
          "snap": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
        }
      }
      inputRef={[Function]}
      mark={
        Object {
          "label": "B",
          "x": 1,
          "y": 1,
        }
      }
      onChange={[Function]}
    />
  </Portal>
</g>
`;

exports[`lineToolComponent snapshot renders 1`] = `
<Component
  changeMarkProps={[Function]}
  from={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  graphProps={
    Object {
      "domain": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "range": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "scale": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
      "size": Object {
        "height": 400,
        "width": 400,
      },
      "snap": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
    }
  }
  onChange={[Function]}
  onDragStart={[Function]}
  onDragStop={[Function]}
  to={
    Object {
      "x": 1,
      "y": 1,
    }
  }
/>
`;
